--- a/KassaDG/ClientApp/src/styles.css
+++ b/KassaDG/ClientApp/src/styles.css
@@ -64,5 +64,5 @@ table .content {
 }
 
 .conserve-width-medium {
-  max-width: 240px;
+  max-width: 230px;
 }
